[project]
name = "nasa-power-solar-site-characterization-and-performance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "hotqueue>=0.2.8",
    "pydantic>=2.13.3",
    "pytest>=9.0.3",
    "redis>=7.4.0",
    "requests>=2.33.1",
]
